# csc511hw2

./: .gitignore  CMakeLists.txt  README.md  animal.cpp  animal.h  antelope.cpp  antelope.h  cell.cpp  cell.h  event.cpp  event.h  grassLand.h  herbivore.cpp  herbivore.h  main.cpp  zebra.cpp  zebra.h
visaulization/: package-lock.json  package.json
visaulization/node-server/: index.js  simulator.js
visaulization/public/: data.txt  index.html  script.js
